added authentication for API

--- a/configs/auth_config.json
+++ b/configs/auth_config.json
@@ -1,4 +1,5 @@
 {
     "domain": "coffee-shop-talk-dev.auth0.com",
-    "clientId": "VHyfz9Dn3c8tFvFv8L30AUDhBlm3S6oJ"
+    "clientId": "VHyfz9Dn3c8tFvFv8L30AUDhBlm3S6oJ",
+    "audience": "https://coffee-shop-talk/api"
 }
