added test for access token

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.8.1",
         "@microsoft/signalr": "^3.1.4",
+        "axios": "^0.19.2",
         "buefy": "^0.8.19",
         "core-js": "^3.6.4",
         "vue": "^2.6.11",
